# blindspot

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: Release-macos.yml  Release.yml  build-macos.yml  build.yml
src/: cmd.rs  main.rs
src/bspm/: installer.rs  mod.rs  package.rs  ui.rs
