[package]
name = "blindspot"
version = "1.0.3"
authors = ["xermicus <bigcyrill@hotmail.com>"]
edition = "2018"
repository = "https://github.com/xermicus/blindspot"
license = "MIT"
description = "Install and update single binary apps without any hassle"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["package", "manager"]

[[bin]]
name="blindspot"
path="src/main.rs"

[dependencies]
structopt = "0.3.14"
smol = { version = "0.1.11", features = ["tokio02"] }
serde = "1.0.111"
serde_derive = "1.0.111"
serde_yaml = "0.8.12"
serde_json = "1.0.53"
anyhow = "1.0.31"
chrono = { version = "0.4.11", features = ["serde"] }
dirs-next = "1.0.1"
async-std = "1.6.0"
isahc = { version = "0.9.3", features = ["json"] }
async-compression = { version = "0.3.4", features = ["futures-write", "gzip", "bzip2", "xz"] }
async-tar = "0.1.1"
termion = "1.5.5"
progress_string = "0.1.1"
once_cell = "1.4.0"
