[package]
name = "blindspot"
version = "1.2.1"
authors = ["xermicus <bigcyrill@hotmail.com>"]
edition = "2018"
repository = "https://github.com/xermicus/blindspot"
license = "MIT"
description = "Install and update single binary apps without any hassle"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["package", "manager"]

[[bin]]
name="blindspot"
path="src/main.rs"

[dependencies]
structopt = "0.3.21"
smol = "1.2.5"
serde = "1.0.118"
serde_derive = "1.0.118"
serde_yaml = "0.8.14"
serde_json = "1.0.61"
anyhow = "1.0.37"
chrono = { version = "0.4.19", features = ["serde"] }
dirs-next = "2.0.0"
async-std = "1.9.0"
isahc = { version = "1.2.0", features = ["json"] }
async-compression = { version = "0.3.5", features = ["futures-write", "gzip", "bzip2", "xz", "deflate"] }
async-tar = "0.3.0"
termion = "1.5.5"
progress_string = "0.2.0"
once_cell = "1.5.2"
